log/build_2022-11-04_16-01-02/robo_cleaner_ai_py/stderr.log
  File "/home/ubuntu/workspace/Velizar/robotics_v1/install/robo_cleaner_ai_py/lib/python3.8/site-packages/robo_cleaner_ai_py/robo_cleaner_ai.py", line 351
    tile_on =
             ^
SyntaxError: invalid syntax

